<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bComponentTextView"
        android:layout_width="128dp"
        android:layout_height="29dp"
        android:layout_marginStart="144dp"
        android:text="@string/starting_b_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bComponentSeekBar" />

    <SeekBar
        android:id="@+id/bComponentSeekBar"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="500dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="712dp"
        android:max="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/gComponentSeekBar"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="500dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="616dp"
        android:max="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/rComponentSeekBar"
        style="@android:style/Widget.Material.Light.SeekBar"
        android:layout_width="500dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="520dp"
        android:max="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveColourButton"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="420dp"
        android:text="@string/save_button_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />

    <Button
        android:id="@+id/loadColourButton"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="420dp"
        android:text="@string/load_button_label"
        app:layout_constraintStart_toEndOf="@+id/saveColourButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />

    <Switch
        android:id="@+id/colourViewingSwitch"
        android:layout_width="49dp"
        android:layout_height="66dp"
        android:layout_marginStart="512dp"
        android:layout_marginTop="320dp"
        android:checked="false"
        android:text="@string/blank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="24sp" />

    <Spinner
        android:id="@+id/colourChooserSpinner"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="332dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sampleSentenceTextView"
        android:layout_width="439dp"
        android:layout_height="108dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/sample_text_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/gComponentTextView"
        android:layout_width="128dp"
        android:layout_height="29dp"
        android:layout_marginStart="144dp"
        android:text="@string/starting_g_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gComponentSeekBar" />

    <TextView
        android:id="@+id/rComponentTextView"
        android:layout_width="128dp"
        android:layout_height="29dp"
        android:layout_marginStart="144dp"
        android:text="@string/starting_r_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rComponentSeekBar" />

    <TextView
        android:id="@+id/colourSwitchTextView"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="124dp"
        android:text="@string/switch_label"
        app:layout_constraintStart_toEndOf="@+id/colourChooserSpinner"
        app:layout_constraintTop_toBottomOf="@+id/sampleSentenceTextView"
        android:textSize="18sp" />

</android.support.constraint.ConstraintLayout>